Disabled numa pinning config
* Supported non-exposed ports